cmake_minimum_required(VERSION 3.0)
project(chat)

# 配置编译选项
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)

# 配置可执行文件路径
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

# 头文件路径
include_directories($(PROJECT_SOURCE_DIR)/include)
include_directories($(PROJECT_SOURCE_DIR)/include/server)

# 加载子目录
add_subdirectory(src)


